[01] boolean algebra - update to a.y. 2018/19

--- a/01-boolean-algebra/01-boolean-algebra.lyx
+++ b/01-boolean-algebra/01-boolean-algebra.lyx
@@ -211,12 +211,12 @@ Esercitazione 1
 \begin_inset Newline newline
 \end_inset
 
-05 Ottobre 2017
+28 Settembre 2018
 \begin_inset Argument 1
 status open
 
 \begin_layout Plain Layout
-05 Ottobre 2017
+28 Settembre 2018
 \end_layout
 
 \end_inset
