[03->04] Moving Intro C after float oct hex

--- a/03-float-oct-hex/03-float-oct-hex.lyx
+++ b/03-float-oct-hex/03-float-oct-hex.lyx
@@ -215,16 +215,16 @@ dai...interpola le annotazioni e dimmi cosa ti aspetti di dover fare qui.
 \end_layout
 
 \begin_layout Date
-Esercitazione 4
+Esercitazione 3
 \begin_inset Newline newline
 \end_inset
 
-04 Ottobre 2018
+28 Settembre 2018
 \begin_inset Argument 1
 status open
 
 \begin_layout Plain Layout
-04 Ottobre 2018
+28 Settembre 2018
 \end_layout
 
 \end_inset
