[07] string - struct - update to a.y. 2018/19 + translate lyrics

--- a/07-string-struct-C/07-string-struct-C.lyx
+++ b/07-string-struct-C/07-string-struct-C.lyx
@@ -113,7 +113,7 @@ status open
 \end_layout
 
 \begin_layout Date
-26/10/2017
+25/10/2018
 \end_layout
 
 \begin_layout Standard
@@ -141,7 +141,7 @@ Informatica A
 \begin_layout Right Address
 corso per Ing.
  Gestionale a.a.
- 2017/18
+ 2018/19
 \end_layout
 
 \begin_layout Standard
@@ -419,107 +419,99 @@ Una storia scalda-ossa
 \end_layout
 
 \begin_layout Quotation
-Lasciate che vi racconti una storia per scaldarvi le ossa
+Let me tell you a story to chill the bones 
 \end_layout
 
 \begin_layout Quotation
-È una cosa che mi è successa davvero
+About a thing that I saw 
 \end_layout
 
 \begin_layout Quotation
-Una notte passeggiavo per le Everglades
+One night wandering in the everglades 
 \end_layout
 
 \begin_layout Quotation
-Avevo bevuto un drink ma non di più
+I'd one drink but no more
 \end_layout
 
 \begin_layout Quotation
-Vagavo godendomi la luce della luna piena
+I was rambling, enjoying the bright moonlight 
 \end_layout
 
 \begin_layout Quotation
-Camminavo col naso all'insù per guardare le stelle
+Gazing up at the stars 
 \end_layout
 
 \begin_layout Quotation
-Non avevo notato una presenza così vicina
+Not aware of a presence so near to me 
 \end_layout
 
 \begin_layout Quotation
-Che osservava ogni mio movimento
+Watching my every move
 \end_layout
 
 \begin_layout Quotation
-Preso dallo spavento sono caduto a terra
+Feeling scared and I fell to my knees 
 \end_layout
 
 \begin_layout Quotation
-Quando qualcosa mi precipitò addosso dagli alberi
+As something rushed me from the trees 
 \end_layout
 
 \begin_layout Quotation
-Mi portò in un luogo profano
+Took me to an unholy place 
 \end_layout
 
 \begin_layout Quotation
-Ed è qui che caddi in disgrazia
+And that is where I fell from grace
 \end_layout
 
 \begin_layout Quotation
-Mi convocarono perché mi unissi a loro
+Then they summoned me over to join in with them 
 \end_layout
 
 \begin_layout Quotation
-Nella danza dei defunti
+To the dance of the dead 
 \end_layout
 
 \begin_layout Quotation
-Nel cerchio di fuoco li seguii
+Into the circle of fire I followed them 
 \end_layout
 
 \begin_layout Quotation
-Nel centro fui condotto
+Into the middle I was led
 \end_layout
 
 \begin_layout Quotation
-Come se il tempo si fosse fermato, ero intorpidito dalla paura
+As if time had stopped still I was numb with fear 
 \end_layout
 
 \begin_layout Quotation
-Ma non volevo tirarmi indietro
+But still I wanted to go 
 \end_layout
 
 \begin_layout Quotation
-E le vampate del fuoco non mi ferivano
+And the blaze of the fire did no hurt upon me 
 \end_layout
 
 \begin_layout Quotation
-Mentre camminavo sulle braci
+As I walked onto the coals
 \end_layout
 
 \begin_layout Quotation
-Le loro voci erano un coro confuso senza inizio, senza fine
+And I heard palindrome sounds around me
 \end_layout
 
 \begin_layout Quotation
-Ogni parola finiva come iniziava.
+And my spirit was lifted from me 
 \end_layout
 
 \begin_layout Quotation
-In questa altalena di suoni palindromi la mia voce si perdeva
+And if only someone had the chance 
 \end_layout
 
 \begin_layout Quotation
-Il rito continuò finché non persi anche la cognizione di me
-\end_layout
-
-\begin_layout Quotation
-E i dannati mi sostituirono nel mio corpo
-\end_layout
-
-\begin_layout Quotation
-Ed io fui dannato con loro
+To witness what happened to me
 \end_layout
 
 \begin_layout Standard
