--- a/10-funcitons-matrix-C/10-functions-matrix-C.lyx
+++ b/10-funcitons-matrix-C/10-functions-matrix-C.lyx
@@ -113,7 +113,7 @@ status open
 \end_layout
 
 \begin_layout Date
-30/11/2017
+22/11/2018
 \end_layout
 
 \begin_layout Standard
@@ -141,7 +141,7 @@ Informatica A
 \begin_layout Right Address
 corso per Ing.
  Gestionale a.a.
- 2017/18
+ 2018/19
 \end_layout
 
 \begin_layout Standard
@@ -262,6 +262,13 @@ TappetoElastico
  fuori dal tappeto.
 \end_layout
 
+\begin_layout Standard
+\begin_inset Newpage clearpage
+\end_inset
+
+
+\end_layout
+
 \begin_layout Subsection
 Approccio alla soluzione
 \end_layout
@@ -354,6 +361,13 @@ Questo significa che modificando il valore puntato da un parametro puntatore,
  esso non svanirà al termine della funzione e può essere usato all'occorrenza
  per fornire un ulteriore output.
  La soluzione è presentata più nel dettaglio di seguito.
+\end_layout
+
+\begin_layout Standard
+\begin_inset Newpage clearpage
+\end_inset
+
+
 \end_layout
 
 \begin_layout Subsection
@@ -839,16 +853,19 @@ n = 5
 
 \end_layout
 
+\begin_layout Standard
+\begin_inset Newpage clearpage
+\end_inset
+
+
+\end_layout
+
 \begin_layout Subsection
 Soluzione per colorazioni successive
 \end_layout
 
 \begin_layout Standard
 Questa soluzione propone di riempire tutta la matrice quadrata di 1
-\begin_inset Separator latexpar
-\end_inset
-
-
 \end_layout
 
 \begin_layout Standard
@@ -1106,10 +1123,6 @@ Questa soluzione propone di riempire tutta la matrice quadrata di 1
 \begin_layout Standard
 ...per poi restringere i limiti del quadrato e riempire con i 2...e infine con
  i 3
-\begin_inset Separator latexpar
-\end_inset
-
-
 \end_layout
 
 \begin_layout Standard
@@ -1625,8 +1638,12 @@ Questa soluzione propone di riempire tutta la matrice quadrata di 1
 \end_layout
 
 \begin_layout Standard
+\begin_inset VSpace vfill
+\end_inset
+
 
 \family typewriter
+
 \begin_inset listings
 lstparams "language=C,numbers=left,basicstyle={\ttfamily},breaklines=true,showstringspaces=false,tabsize=2"
 inline false
@@ -1690,6 +1707,20 @@ void bersaglio(int m[][N], int n) {
 
 \end_layout
 
+\begin_layout LyX-Code
+\begin_inset VSpace vfill
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Newpage clearpage
+\end_inset
+
+
+\end_layout
+
 \begin_layout Subsection
 Soluzione per simmetria
 \end_layout
@@ -1697,10 +1728,6 @@ Soluzione per simmetria
 \begin_layout Standard
 Questa soluzione propone di sfruttare la simmetria del pattern per risparmiare
  calcoli.
-\begin_inset Separator latexpar
-\end_inset
-
-
 \end_layout
 
 \begin_layout Standard
@@ -1979,6 +2006,13 @@ m[n-1-i][j] = m[i][j]
 
 \begin_layout LyX-Code
 m[n-1-i][n-1-j] = m[i][j]
+\end_layout
+
+\begin_layout LyX-Code
+\begin_inset VSpace vfill
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
@@ -2536,6 +2570,20 @@ n = 6
 </row>
 </lyxtabular>
 
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset VSpace vfill
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Newpage clearpage
 \end_inset
 
 
