[11] files  - update to a.y. 2018-19

--- a/11-files-C/11-files.lyx
+++ b/11-files-C/11-files.lyx
@@ -104,7 +104,7 @@ status open
 
 
 \begin_inset Graphics
-	filename ../13-files-C/square_framed.pdf
+	filename square_framed.pdf
 	width 3.5cm
 
 \end_inset
@@ -113,7 +113,7 @@ status open
 \end_layout
 
 \begin_layout Date
-29/11/2017
+29/11/2018
 \end_layout
 
 \begin_layout Standard
